# RideWeather

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: cmake.yml
RWcgi/: CMakeLists.txt
RWcgi/src/: main.cpp
RWd/: CMakeLists.txt
RWgui/: CMakeLists.txt
RWgui/RWgui/: RWgui.vcxproj  RWgui.vcxproj.filters
RWgui/include/: AthleteModelView.h  Common.h  Config.h  MainWindow.h  SimplePlotWidget.h  StravaApiController.h
RWgui/src/: ActivityModel.cpp  AthleteModelView.cpp  Config.cpp  MainWindow.cpp  MainWindow.ui  SimplePlotWidget.cpp  SimplePlotWidget.ui  StravaApiController.cpp  main.cpp
RWlib/: CMakeLists.txt
RWlib/RWLib/: RWLib.vcxproj  RWLib.vcxproj.filters
RWlib/include/: AthleteOverview.h  StravaApi.h  StravaType.h  WeatherSource.h  enum.h
RWlib/src/: AthleteOverview.cpp  StravaApi.cpp  StravaType.cpp  WeatherSource.cpp
RWlib/test/: ReadJson.cpp  ReadJson.h  activity.json  athlete.json  athlete_error.json  main.cpp  stats.json
targets/cmake/: CMakeLists.txt
targets/vs2019/: RideWeather.sln
targets/vs2019/cpr/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cpr.sln
targets/vs2019/cpr/cpr/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cpr.vcxproj  cpr.vcxproj.filters
targets/vs2019/cpr/opt/: INSTALL.vcxproj  INSTALL.vcxproj.filters
targets/vs2019/cpr/opt/curl/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CURL.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  curl-config  libcurl.pc  uninstall.vcxproj  uninstall.vcxproj.filters
targets/vs2019/cpr/opt/curl/CMake/: cmake_uninstall.cmake
targets/vs2019/cpr/opt/curl/lib/: INSTALL.vcxproj  INSTALL.vcxproj.filters  curl_config.h  libcurl.vcxproj  libcurl.vcxproj.filters
targets/vs2019/rapidjson/: ALL_BUILD.vcxproj  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  RapidJSON.sln  RapidJSONConfig.cmake  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  travis_doc.vcxproj  travis_doc.vcxproj.filters
targets/vs2019/rapidjson/doc/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
targets/vs2019/rapidjson/example/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  archivertest.vcxproj  archivertest.vcxproj.filters  capitalize.vcxproj  capitalize.vcxproj.filters  condense.vcxproj  condense.vcxproj.filters  examples.vcxproj  examples.vcxproj.filters  filterkey.vcxproj  filterkey.vcxproj.filters  filterkeydom.vcxproj  filterkeydom.vcxproj.filters  jsonx.vcxproj  jsonx.vcxproj.filters  lookaheadparser.vcxproj  lookaheadparser.vcxproj.filters  messagereader.vcxproj  messagereader.vcxproj.filters  parsebyparts.vcxproj  parsebyparts.vcxproj.filters  pretty.vcxproj  pretty.vcxproj.filters  prettyauto.vcxproj  prettyauto.vcxproj.filters  schemavalidator.vcxproj  schemavalidator.vcxproj.filters  serialize.vcxproj  serialize.vcxproj.filters  simpledom.vcxproj  simpledom.vcxproj.filters  simplepullreader.vcxproj  simplepullreader.vcxproj.filters  simplereader.vcxproj  simplereader.vcxproj.filters  simplewriter.vcxproj  simplewriter.vcxproj.filters  (+4 more)
targets/vs2019/rapidjson/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
targets/vs2019/rapidjson/test/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  tests.vcxproj  tests.vcxproj.filters
targets/vs2019/rapidjson/test/perftest/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  perftest.vcxproj  perftest.vcxproj.filters
targets/vs2019/rapidjson/test/unittest/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  namespacetest.vcxproj  namespacetest.vcxproj.filters  unittest.vcxproj  unittest.vcxproj.filters
